temp_files/tmp_1628326577.3.Compile_error
./temp_files/tmp_1628326577.3.cpp: In function ‘void Test1()’:
./temp_files/tmp_1628326577.3.cpp:19:6: error: ‘ret’ was not declared in this scope
   if(ret){
      ^~~
./temp_files/tmp_1628326577.3.cpp:19:6: note: suggested alternative: ‘re’
   if(ret){
      ^~~
      re
./temp_files/tmp_1628326577.3.cpp: At global scope:
./temp_files/tmp_1628326577.3.cpp:27:6: error: redefinition of ‘void Test1()’
 void Test1(){
      ^~~~~
./temp_files/tmp_1628326577.3.cpp:16:6: note: ‘void Test1()’ previously defined here
 void Test1(){
      ^~~~~
./temp_files/tmp_1628326577.3.cpp: In function ‘void Test1()’:
./temp_files/tmp_1628326577.3.cpp:30:7: error: ‘ret’ was not declared in this scope
   if(!ret){
       ^~~
./temp_files/tmp_1628326577.3.cpp:30:7: note: suggested alternative: ‘re’
   if(!ret){
       ^~~
       re
